kubernetes/projectdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-db
  template:
    metadata:
      labels:
        app: project-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
