kubernetes/projectservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectservice
  template:
    metadata:
      labels:
        app: projectservice
    spec:
      containers:
        - name: projectservice
          image: ghcr.io/mitchell2001b/projectservice:main
          ports:
            - containerPort: 8888
          resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "100m"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
