kubernetes/projectdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-db
spec:
  selector:
    app: project-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
