kubernetes/projectservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectservice
spec:
  selector:
    app: projectservice
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
