kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projectservice-ingress
spec:
  rules:
    - host: projectservice.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projectservice
                port:
                  number: 8888
